--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>delimited | Three.js Maps</title>
     <style>
       text {
         fill: white;
       }
-      #mapContainer {
+      .mapDiv {
         margin: 100px;
         background-color: #333;
-        width: 80%;
+        width: 700px;
         height: 500px;
       }
       #tooltip {
@@ -44,35 +42,23 @@
       <img src="css/img/pinch.png">
       <img src="css/img/triple.png">
     </div>
-    <div id="mapContainer"></div>
+    <div class="mapDiv" id="map1Container"></div>
+    <div class="mapDiv" id="map2Container"></div>
     <script src="lib/three.min.js"></script>
     <script src="lib/tween.js"></script>
     <script src="lib/CSS3DRenderer.js"></script>
-    <script src="lib/TrackballControls.js"></script>
     <script src="lib/d3.min.js"></script>
-    <script src="js/viz.js"></script>
     <script>
       d3.json("data/religions.json", function (error, data) {
+        var yVar = 'year2010', rVar = 'chrstgenpct', cVar = 'map1Container';
 
-        var mouse11 = getMouseOut(featureLayer);
-
-        console.log(getMouseOut(featureLayer));
-
-        var leafletMap = L.mapbox.map('mapContainer', 'delimited.ho6391dg')
+        var leafletMap = L.mapbox.map(cVar, 'delimited.ho6391dg')
             .setView([33, 0], 2);
 
         var featureLayer = L.geoJson(data,  {
-              style: getStyle('year2010','chrstgenpct'),
+              style: getStyle(yVar, rVar),
               onEachFeature: onEachFeature
           }).addTo(leafletMap);
-
-      /*
-      var featureLayer = L.mapbox.featureLayer(data)
-          .setFilter(function() { return true; })
-          .setStyle(style)
-          .addTo(leafletMap);
-
-*/
 
       function colors (d) {
         return d >= 0.9 ? '#703f29' :
@@ -141,13 +127,93 @@
         }
       }
 
-      function getMouseOut(objectLayer) {
-        return function (e) {
-          console.log(layer);
-          objectLayer.resetStyle(e.target);
-        };
+      function mouseout(e) {
+          console.log(e);
+          featureLayer.resetStyle(e.target);
       }
 
+      function zoomToFeature(e) {
+          leafletMap.fitBounds(e.target.getBounds());
+      }
+      });
+
+      d3.json("data/religions.json", function (error, data) {
+        var yVar = 'year1960', rVar = 'chrstgenpct', cVar = 'map2Container';
+
+        var leafletMap = L.mapbox.map(cVar, 'delimited.ho6391dg')
+            .setView([33, 0], 2);
+
+        var featureLayer = L.geoJson(data,  {
+              style: getStyle(yVar, rVar),
+              onEachFeature: onEachFeature
+          }).addTo(leafletMap);
+
+      function colors (d) {
+        return d >= 0.9 ? '#703f29' :
+               d >= 0.8 ? '#955436' :
+               d >= 0.7 ? '#b05e32' :
+               d >= 0.6 ? '#d56c2a' :
+               d >= 0.5 ? '#ea8435' :
+               d >= 0.4 ? '#f89e5d' :
+               d >= 0.3 ? '#fbb885' :
+               d >= 0.2 ? '#fdd3b1' :
+               d >= 0.1 ? '#fee6d3' :
+               d  > 0.0 ? '#fff3ea' :
+                          '#8b8682';
+      }
+
+      function getColor (data, year, relig) {
+        var hex = '#000000';
+        if (data === undefined) {
+          return hex;
+        } else {
+          data.forEach(function (item, i) {
+            if (item.name === year) {
+              hex = colors(item.children[0][relig]);
+            }
+          });
+          return hex;
+        }
+      }
+
+      function getStyle(year, relig) {
+        return function (feature) {
+          var data = feature.properties.data;
+          return {
+            fillColor: getColor(data, year, relig),
+            weight: 1,
+            opacity: 1,
+            color: 'grey',
+            dashArray: '3',
+            fillOpacity: .6
+          };
+        }
+      }
+
+      function onEachFeature(feature, layer) {
+        layer.on({
+            mouseover: highlightFeature,
+            mouseout: function (e) {
+              console.log(e);
+              featureLayer.resetStyle(e.target);
+            },
+            click: zoomToFeature
+        });
+      }
+
+      function highlightFeature(e) {
+        var layer = e.target;
+
+        layer.setStyle({
+            weight: 2,
+            color: 'tomato',
+            dashArray: '',
+            fillOpacity: 0.5
+        });
+        if (!L.Browser.ie && !L.Browser.opera) {
+            layer.bringToFront();
+        }
+      }
 
       function mouseout(e) {
           console.log(e);
@@ -157,16 +223,6 @@
       function zoomToFeature(e) {
           leafletMap.fitBounds(e.target.getBounds());
       }
-
-
-        window.mapper = featureLayer;
-        console.log(featureLayer);
-        /*VIZ.drawElements(data);
-        VIZ.transform('helix');
-        d3.select("#loading").remove();
-        VIZ.render();
-        VIZ.animate();
-        */window.addEventListener('resize', VIZ.onWindowResize, false);
       });
     </script>
   </body>
