Fix for safari in place - working - needs some love

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         background-color: rgba(48,103,145,.75);
       }
       .mapDiv { 
-        border: 10px solid white;
+        border: 10px solid rgba(255,255,255,.75);
+        border-radius: 6px;
         position: absolute; 
         top: 0; 
         bottom: 0; 
