Move css to separate file, re-org

--- a/index.html
+++ b/index.html
@@ -5,38 +5,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>delimited | Three.js Maps</title>
-    <style>
-      body { 
-        margin:0; 
-        padding:0; 
-        background-color: #000;
-      }
-      button {
-        color: #fff;
-        background: transparent;
-        outline: 1px solid rgba(48,103,145,.75);
-        border: 0px;
-        padding: 5px 10px;
-        cursor: pointer;
-      }
-      button:hover {
-        background-color: rgba(48,103,145,.5);
-      }
-      button:active {
-        color: #000000;
-        background-color: rgba(48,103,145,.75);
-      }
-      .mapDiv { 
-        border: 10px solid rgba(255,255,255,.75);
-        border-radius: 6px;
-        position: absolute; 
-        top: 0; 
-        bottom: 0; 
-        width: 800px;
-        height: 500px;
-      }
-    </style>
   </head>
   <body>
     <div id="intro">
