Switching to global swtich for no 3D

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           }
         ];
 
-      VIZ.createMaps(items, data);
+      VIZ.createMaps(items.filter(function (d, i) { return i < 5; }), data);
       VIZ.transform('grid');
       d3.select("#loading").remove();
       VIZ.render();
