--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="intro">
-      <h3>D3 Maps in Three.js</h3>
+      <h3>CDC Maps in Three.js</h3>
     </div>
     <div id="loading">
       <h5>Loading...</h5>
@@ -30,67 +30,20 @@
     <script src="lib/d3.min.js"></script>
     <script src="js/viz.js"></script>
     <script>
-      d3.json("data/religions.json", function (error, data) {
+      d3.json("data/us-cdc.json", function (error, data) {
 
-        var items = [
-          {
-            year: 'year1955',
-            relg: 'chrstgenpct',
-            elem: 'relgMap0'
-          },
-          {
-            year: 'year1960',
-            relg: 'chrstgenpct',
-            elem: 'relgMap1'
-          },
-          {
-            year: 'year1970',
-            relg: 'chrstgenpct',
-            elem: 'relgMap2'
-          },
-          {
-            year: 'year1975',
-            relg: 'chrstgenpct',
-            elem: 'relgMap3'
-          },
-          {
-            year: 'year1980',
-            relg: 'chrstgenpct',
-            elem: 'relgMap4'
-          },
-          {
-            year: 'year1985',
-            relg: 'chrstgenpct',
-            elem: 'relgMap5'
-          },
-          {
-            year: 'year1990',
-            relg: 'chrstgenpct',
-            elem: 'relgMap6'
-          },
-          {
-            year: 'year1995',
-            relg: 'chrstgenpct',
-            elem: 'relgMap7'
-          },
-          {
-            year: 'year2000',
-            relg: 'chrstgenpct',
-            elem: 'relgMap8'
-          },
-          {
-            year: 'year2005',
-            relg: 'chrstgenpct',
-            elem: 'relgMap9'
-          }
-        ];
+        d3.select("#menu").selectAll('button')
+          .data(['sphere', 'helix', 'grid']).enter()
+          .append('button')
+          .html(function (d) { return d; })
+          .on('click', function (d) { VIZ.transform(d); })
 
-      VIZ.createMaps(items.filter(function (d, i) { return i < 10; }), data);
-      VIZ.transform('grid');
-      d3.select("#loading").remove();
-      VIZ.render();
-      VIZ.animate();
-      window.addEventListener('resize', VIZ.onWindowResize, false);
+        VIZ.drawMapBox(data);
+        VIZ.transform('grid');
+        d3.select("#loading").remove();
+        VIZ.render();
+        VIZ.animate();
+        window.addEventListener('resize', VIZ.onWindowResize, false);
 
       });
     </script>
