Working on zoom feature

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
           .data(['sphere', 'helix', 'grid']).enter()
           .append('button')
           .html(function (d) { return d; })
-          .on('click', function (d) { VIZ.transform(d); })
+          .on('click', function (d) {
+            VIZ.state = d + "";
+            VIZ.transform(d); 
+          })
 
         VIZ.drawMapBox(maps.filter(function (d, i) { return i < 10; }), data);
         VIZ.transform('grid');
