--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
 
         d3.select("#menu").selectAll('button')
-          .data(['sphere', 'helix', 'grid']).enter()
+          .data(['sphere', 'grid']).enter()
           .append('button')
           .html(function (d) { return d; })
           .on('click', function (d) {
