--- a/example2_D3Map.html
+++ b/example2_D3Map.html
@@ -28,7 +28,7 @@
     <script src="lib/CSS3DRenderer.js"></script>
     <script src="lib/TrackballControls.js"></script>
     <script src="lib/d3.min.js"></script>
-    <script src="js/viz.js"></script>
+    <script src="js/example2.js"></script>
     <script>
       d3.json("data/us-cdc.json", function (error, data) {
 
@@ -51,7 +51,7 @@
             VIZ.transform(); 
           })
 
-        VIZ.drawMapBox(maps.filter(function (d, i) { return i < 10; }), data);
+        VIZ.drawD3Maps(maps.filter(function (d, i) { return i < 10; }), data);
         VIZ.transform();
         d3.select("#loading").remove();
         d3.select("#container").transition().duration(3000).style("opacity", 1);
