adjust page title

--- a/example2_D3Map.html
+++ b/example2_D3Map.html
@@ -7,7 +7,7 @@
     <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>delimited | Three.js Maps</title>
+    <title>delimited | D3 and Three.js</title>
   </head>
   <body>
     <div id="intro">
