Clean-up stray vars/line wrap

--- a/example2_D3Map.html
+++ b/example2_D3Map.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="intro">
-      <h3>CDC Maps in Three.js</h3>
+      <h3>D3.js and THREE.js Demo</h3>
     </div>
     <div id="loading">
       <h5>Loading...</h5>
