--- a/example2_D3Map.html
+++ b/example2_D3Map.html
@@ -51,7 +51,7 @@
             VIZ.transform(); 
           })
 
-        VIZ.drawD3Maps(maps.filter(function (d, i) { return i < 10; }), data);
+        VIZ.drawElements(maps, data);
         VIZ.transform();
         d3.select("#loading").remove();
         d3.select("#container").transition().duration(3000).style("opacity", 1);
