--- a/example1_MapBox.html
+++ b/example1_MapBox.html
@@ -50,7 +50,7 @@
             VIZ.transform(); 
           })
 
-        VIZ.drawMapBox(maps, data);
+        VIZ.drawElements(maps, data);
         VIZ.transform();
         d3.select("#loading").remove();
         d3.select("#container").transition().duration(3000).style("opacity", 1);
