--- a/example1_MapBox.html
+++ b/example1_MapBox.html
@@ -7,14 +7,14 @@
     <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>delimited | Map Box and Three.js</title>
+    <title>delimited | MapBox with D3.js and Three.js</title>
   </head>
   <body>
     <div id="intro">
-      <h3>CDC Maps in Three.js</h3>
+      <h2>MapBox with D3.js and Three.js</h2>
     </div>
     <div id="loading">
-      <h5>Loading...</h5>
+      <h5 id="loading-text">Loading...</h5>
     </div>
     <div id="container" style="opacity:0;"></div>
     <div id="menu"></div>
