--- a/example2_D3Map.html
+++ b/example2_D3Map.html
@@ -7,14 +7,14 @@
     <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>delimited | D3 and Three.js</title>
+    <title>delimited | D3.js SVG Maps and Three.js</title>
   </head>
   <body>
     <div id="intro">
-      <h3>D3.js and THREE.js Demo</h3>
+      <h3>D3.js SVG Maps and Three.js</h3>
     </div>
     <div id="loading">
-      <h5>Loading...</h5>
+      <h5 id="loading-text">Loading...</h5>
     </div>
     <div id="container" style="opacity:0;"></div>
     <div id="menu"></div>
