--- a/map-box-example.html
+++ b/map-box-example.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="intro">
-      <h2>MapBox with D3.js and Three.js</h2>
+      <h2>Demo using MapBox with D3.js and Three.js</h2>
     </div>
     <div id="loading">
       <h5 id="loading-text">Loading...</h5>
