--- a/d3-map-example.html
+++ b/d3-map-example.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="intro">
-      <h3>D3.js SVG Maps and Three.js</h3>
+      <h2>Demo | D3.js SVG Maps and Three.js</h2>
     </div>
     <div id="loading">
       <h5 id="loading-text">Loading...</h5>
@@ -25,10 +25,9 @@
     <script src="lib/CSS3DRenderer.js"></script>
     <script src="lib/TrackballControls.js"></script>
     <script src="lib/d3.min.js"></script>
-    <script src="js/example2.js"></script>
+    <script src="js/d3-map-example.js"></script>
     <script>
       d3.json("data/us-cdc.json", function (error, data) {
-
         var maps = [];
         var keys = data.features[0].properties.data;
 
@@ -39,6 +38,9 @@
           });
         }
 
+        //**************************************
+        //  CREATE BUTTONS
+        //**************************************
         d3.select("#menu").selectAll('button')
           .data(['sphere', 'grid']).enter()
           .append('button')
@@ -48,10 +50,13 @@
             VIZ.transform(); 
           })
 
+        //**************************************
+        //  DRAW MAPS and ANIMATE
+        //**************************************
         VIZ.drawElements(maps, data);
         VIZ.transform();
-        d3.select("#loading").remove();
-        d3.select("#container").transition().duration(3000).style("opacity", 1);
+        d3.select("#loading").transition().duration(2500).style("opacity", 0);
+        d3.select("#container").transition().duration(3500).style("opacity", 1);
         VIZ.render();
         VIZ.animate();
         window.addEventListener('resize', VIZ.onWindowResize, false);
